--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <application
@@ -15,6 +15,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.polytech.gestetu.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.polytech.gestetu.front.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
