--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,17 +14,18 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.polytech.gestetu.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name="com.polytech.gestetu.front.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@style/AppLoginTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.polytech.gestetu.front.MenuActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
