--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,13 @@
     package="com.polytech.gestetu"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <application
+        android:name=".GlobalVars"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -28,5 +29,10 @@
             android:label="@string/app_name" >
         </activity>
     </application>
+    
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
+    </uses-permission>
 
 </manifest>
