--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,16 @@
             android:name="com.polytech.gestetu.front.MenuActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.polytech.gestetu.front.EditStudentActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppLoginTheme" >
+        </activity>
+        <activity
+            android:name="com.polytech.gestetu.front.AddStudentActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppLoginTheme" >
+        </activity>
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" >
